--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/maskable-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Pickup Tracker</title>
     
@@ -24,7 +24,7 @@
     <!-- PWA Icons -->
     <link rel="icon" type="image/png" sizes="192x192" href="/pwa-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/pwa-512x512.png">
-    <link rel="mask-icon" href="/masked-icon.svg" color="#2563eb">
+    <link rel="mask-icon" href="/maskable-icon.png" color="#2563eb">
     
     <!-- Preload critical resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
