feat: update app branding and descriptions for ZomaNext

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/maskable-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Pickup Tracker</title>
+    <title>ZomaNext | Office Food Pickup Tracker</title>
     
     <!-- PWA Meta Tags -->
-    <meta name="description" content="Track your office food pickup orders from Zomato, Swiggy, and Uber Eats">
+    <meta name="description" content="Track your office food pickup orders from Zomato.">
     <meta name="theme-color" content="#2563eb">
     
     <!-- Apple PWA Meta Tags -->
